--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,66 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Inspinia</title>
-
+  <title>OHBD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  
+  
+
+ 
+      <!-- <div id="inSlider" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#inSlider" data-slide-to="0" class="active"></li>
+              <li data-target="#inSlider" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                  <div class="container">
+                     
+                      <div class="carousel-caption">
+                          <br/>
+                          <br/>
+                          <h1>
+                              OPEN HEART BIG DREAMS INNOVATION PLATFORM
+                          </h1>
+                          <p>
+                              <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="header-back one"></div>
+  
+              </div>
+              <div class="carousel-item">
+                  <div class="container">
+                      <div class="carousel-caption blank">
+                          <br />
+                          <br />
+                          <br />
+                          <br />
+                          <br />
+                          <h1> &nbsp;  &nbsp;  &nbsp;  &nbsp; &nbsp; INNOVATIVE IDEAS THAT ARE BEYOND AWESOME</h1>
+  
+  
+                          <p>&nbsp;  &nbsp;  &nbsp;  &nbsp; &nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp; &nbsp; <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                      </div>
+                  </div>
+                  <!-- Set background for slide in css -->
+                  <!-- <div class="header-back two"></div>
+              </div>
+          </div>
+          <a class="carousel-control-prev" href="#inSlider" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#inSlider" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div> --> 
+      <app-root></app-root>
+ 
 </body>
 </html>
